Added code for changing the font colors of the number of neighbors, as well as added those to the settings so they saved.

--- a/Game of Life/App.config
+++ b/Game of Life/App.config
@@ -19,6 +19,12 @@
             <setting name="GraphicsPanel1_SelectedBoxColor" serializeAs="String">
                 <value>Gray</value>
             </setting>
+            <setting name="GraphicsPanel1_SelectedCellNumberColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+            <setting name="GraphicsPanel1_UnselectedCellNumberColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
