--- a/Game of Life/Properties/Settings.settings
+++ b/Game of Life/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="GraphicsPanel1_SelectedBoxColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Gray</Value>
     </Setting>
+    <Setting Name="GraphicsPanel1_SelectedCellNumberColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">White</Value>
+    </Setting>
+    <Setting Name="GraphicsPanel1_UnselectedCellNumberColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Black</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
