Included timer interval in settings

--- a/Game of Life/App.config
+++ b/Game of Life/App.config
@@ -25,6 +25,9 @@
             <setting name="GraphicsPanel1_UnselectedCellNumberColor" serializeAs="String">
                 <value>Black</value>
             </setting>
+            <setting name="Form1_TimerInterval" serializeAs="String">
+                <value>100</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
