--- a/Game of Life/Properties/Settings.settings
+++ b/Game of Life/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="GraphicsPanel1_UnselectedCellNumberColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Black</Value>
     </Setting>
+    <Setting Name="Form1_TimerInterval" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
