Implemented the universe size as a saved setting

--- a/Game of Life/App.config
+++ b/Game of Life/App.config
@@ -28,6 +28,12 @@
             <setting name="Form1_TimerInterval" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="Form1_UniverseRows" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="Form1_UniverseColumns" serializeAs="String">
+                <value>5</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
