--- a/Game of Life/Properties/Settings.settings
+++ b/Game of Life/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="Form1_TimerInterval" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="Form1_UniverseRows" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="Form1_UniverseColumns" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
