Allowed user to change gridx10 color Added it to settings

--- a/Game of Life/App.config
+++ b/Game of Life/App.config
@@ -34,6 +34,9 @@
             <setting name="Form1_UniverseColumns" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="GraphicsPanel1_Gridx10Color" serializeAs="String">
+                <value>Black</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
