--- a/Game of Life/Properties/Settings.settings
+++ b/Game of Life/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="Form1_UniverseColumns" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="GraphicsPanel1_Gridx10Color" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Black</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
