Added randomization style to settings

--- a/Game of Life/App.config
+++ b/Game of Life/App.config
@@ -37,6 +37,9 @@
             <setting name="GraphicsPanel1_Gridx10Color" serializeAs="String">
                 <value>Black</value>
             </setting>
+            <setting name="Form1_RandomizeStyle" serializeAs="String">
+                <value>time</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
